--- a/src/components/Cards/DailyForecast/DailyForecast.scss
+++ b/src/components/Cards/DailyForecast/DailyForecast.scss
@@ -1,62 +1,85 @@
 .daily-forecast {
-    .forecast-card {
+  .forecast-card {
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(5px);
+    margin: 1rem;
+    padding: 1rem;
+    overflow: hidden;
 
-      border-radius: 10px;
-      background-color: rgba(255, 255, 255, 0.7); 
-      backdrop-filter: blur(5px);
-      margin: 1rem;
-      padding: 1rem;
-      overflow: hidden;
-  
-      .forecast-title {
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin-bottom: 1rem;
-        text-align: left;
-      }
-    
-      .forecast-table {
-        .forecast-row {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          padding: 0.5rem 0;
-          &:not(:last-child) {
-            border-bottom: 1px solid rgba(0, 0, 0, 0.1); 
-          }
-        }
-    
-        .forecast-cell {
-          padding: 0.5rem;
-          &.date, &.day {
-            flex-basis: 30%;
-          }
-          &.icon {
-            flex-basis: 20%;
-            img {
-              width: 30px;
-              height: 30px;
-            }
-          }
-          &.temp {
-            flex-basis: 20%;
-            text-align: right;
-            font-weight: bold;
-          }
-        }
-      }
+    .forecast-title {
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin-bottom: 1rem;
+      text-align: left;
     }
-    
-    @media (max-width: 768px) {
-      .daily-forecast .forecast-card {
-        margin: 0;
-        border-radius: 0;
+
+    .forecast-table {
+      .forecast-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0.5rem 0;
+        &:not(:last-child) {
+          border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        }
       }
-  
-      .forecast-table .forecast-row {
-        flex-direction: column;
-        align-items: flex-start;
+
+      .forecast-cell {
+        padding: 0.5rem;
+        &.date,
+        &.day {
+          flex-basis: 30%;
+        }
+        &.icon {
+          flex-basis: 20%;
+          img {
+            width: 30px;
+            height: 30px;
+          }
+        }
+        &.temp {
+          flex-basis: 20%;
+          text-align: right;
+          font-weight: bold;
+        }
       }
     }
   }
-  
+
+  @media (max-width: 768px) {
+    .daily-forecast .forecast-card {
+      margin: 0;
+      border-radius: 0;
+    }
+
+    .forecast-table .forecast-row {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+}
+
+.skeleton-loader {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  .skeleton-row {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+
+    .skeleton-date,
+    .skeleton-day,
+    .skeleton-icon,
+    .skeleton-temp {
+      width: 250px;
+      height: 50px;
+      background-color: rgba(0, 0, 0, 0.2);
+      border-radius: 4px;
+      margin-right: 10px;
+    }
+  }
+}
