--- a/src/components/Layout/Sidebar/Sidebar.scss
+++ b/src/components/Layout/Sidebar/Sidebar.scss
@@ -1,17 +1,21 @@
 .sidebar {
-  position: fixed; 
-  top: 0; 
-  left: 0; 
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 240px;
-  background-color: rgba(255, 255, 255, 0.7);
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.9);
+  transition: transform 0.3s ease-in-out;
+  z-index: 1000;
   backdrop-filter: blur(5px);
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   padding: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  height: 100%; 
+  height: 100%;
   overflow-y: auto;
+  transition: left 0.3s;
 
   .logo-container {
     display: flex;
@@ -59,41 +63,83 @@
       &:hover {
         background-color: #f4f7fa;
       }
-    }
 
-    .active {
-      span {
+      &.active span,
+      &.active .icon {
         color: #1e90ff;
         font-weight: bold;
-      }
-      .icon {
-        color: #1e90ff;
       }
     }
   }
 }
 
+.menu-button {
+  position: fixed;
+  display: none;
+  top: 1rem;
+  left: 1rem;
+  z-index: 1001;
+  background: white;
+  border: none;
+  font-size: 2rem;
+}
+
+.menu-icon {
+  color: #1e90ff;
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
 @media (max-width: 768px) {
+  .menu-button {
+    display: block;
+  }
+
   .sidebar {
-    position: static; 
-    height: auto; 
-    width: 100%; 
-    padding: 1rem;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    height: 100%;
+    width: 240px;
+    transition: left 0.3s;
+    z-index: 1050;
+  }
 
-    .logo-container {
-      justify-content: center;
-      img {
-        height: 40px;
-      }
-      .logo-title {
-        display: none;
-      }
-    }
+  .sidebar.open {
+    left: 0;
+  }
 
-    .nav-items {
-      .nav-item {
-        margin-bottom: 0.5rem;
-      }
-    }
+  .sidebar.closed {
+    left: -100%;
+  }
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 998; 
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .close-button {
+    position: fixed; 
+    top: 1rem; 
+    right: 1rem;
+    background: none;
+    border: none;
+    font-size: 2rem;
+    color: white; 
+    cursor: pointer;
+    z-index: 3000; 
+  }
+
+  .close-icon {
+    color: black; 
   }
 }
